--- a/tutorial_parser.ipynb
+++ b/tutorial_parser.ipynb
@@ -254,35 +254,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[validation] epoch 0.0: per-word loss: 2.35509942849\n",
-      "epoch 0.01: per-word loss: 1.48255809603\n",
-      "epoch 0.02: per-word loss: 1.08090971986\n",
-      "epoch 0.03: per-word loss: 0.944152983054\n",
-      "epoch 0.04: per-word loss: 0.953884831015\n",
-      "epoch 0.05: per-word loss: 0.834949359487\n",
-      "epoch 0.06: per-word loss: 0.811419209329\n",
-      "epoch 0.07: per-word loss: 0.739562879959\n",
-      "epoch 0.08: per-word loss: 0.72608875857\n",
-      "epoch 0.09: per-word loss: 0.715399681898\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-5eacd1fbaf60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m                 \u001b[0mdev_words\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m                     \u001b[0mdev_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscalar_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[validation] epoch {}: per-word loss: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdev_loss\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mdev_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0mvalidation_losses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdev_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "instances_processed = 0\n",
     "validation_losses = []\n",
@@ -317,7 +289,7 @@
     "        if loss is not None:\n",
     "            total_loss += loss.scalar_value()\n",
     "            loss.backward()\n",
-    "            trainer.update()\n"
+    "            trainer.update()"
    ]
   },
   {
@@ -326,30 +298,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fun --> is\n",
-      "fun --> Austin\n",
-      "in --> fun\n",
-      "<unk> --> in\n",
-      "<unk> --> .\n",
-      "ROOT --> <unk>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "exprssion 316/1496"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'Parsing in Austin is fun .'\n",
     "UNK = vocab_words.w2i['<unk>']\n",
@@ -365,7 +314,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -374,7 +325,18 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -386,7 +348,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
